.tmp/dev-x-auth-fix.err.log
[next-auth][warn] DEBUG_ENABLED
Lit is in dev mode. Not recommended for production! See https://lit.dev/msg/dev-mode for more information.
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[browser] Lit is in dev mode. Not recommended for production! See https://lit.dev/msg/dev-mode for more information.
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
WalletConnect Core is already initialized. This is probably a mistake and can lead to unexpected behavior. Init() was called 2 times.
WalletConnect Core is already initialized. This is probably a mistake and can lead to unexpected behavior. Init() was called 2 times.
Multiple versions of Lit loaded. Loading multiple versions is not recommended. See https://lit.dev/msg/multiple-versions for more information.
[browser] Lit is in dev mode. Not recommended for production! See https://lit.dev/msg/dev-mode for more information.
[browser] Lit is in dev mode. Not recommended for production! See https://lit.dev/msg/dev-mode for more information.
[next-auth][warn] DEBUG_ENABLED
[adapter-sends] 0G ChainScan v2 failed for base https://chainscan.0g.ai SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
    at JSON.parse (<anonymous>)
    at fetchJsonWithTimeout (src\app\api\adapter-sends\route.ts:222:24)
    at async fetchOgAddressTokenTransfersV2 (src\app\api\adapter-sends\route.ts:450:22)
    at async fetchOgAdapterSends (src\app\api\adapter-sends\route.ts:523:19)
    at async GET (src\app\api\adapter-sends\route.ts:912:50)
  220 |     }
  221 |
> 222 |     return text ? JSON.parse(text) : null;
      |                        ^
  223 |   } finally {
  224 |     clearTimeout(id);
  225 |   }
[adapter-sends] 0G ChainScan old API failed for base https://chainscan.0g.ai SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
    at JSON.parse (<anonymous>)
    at fetchJsonWithTimeout (src\app\api\adapter-sends\route.ts:222:24)
    at async fetchOgAddressTokenTransfersOldApi (src\app\api\adapter-sends\route.ts:493:20)
    at async fetchOgAdapterSends (src\app\api\adapter-sends\route.ts:538:19)
    at async GET (src\app\api\adapter-sends\route.ts:912:50)
  220 |     }
  221 |
> 222 |     return text ? JSON.parse(text) : null;
      |                        ^
  223 |   } finally {
  224 |     clearTimeout(id);
  225 |   }
[adapter-sends] og all ChainScan strategies failed SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
    at JSON.parse (<anonymous>)
    at fetchJsonWithTimeout (src\app\api\adapter-sends\route.ts:222:24)
    at async fetchOgAddressTokenTransfersOldApi (src\app\api\adapter-sends\route.ts:493:20)
    at async fetchOgAdapterSends (src\app\api\adapter-sends\route.ts:538:19)
    at async GET (src\app\api\adapter-sends\route.ts:912:50)
  220 |     }
  221 |
> 222 |     return text ? JSON.parse(text) : null;
      |                        ^
  223 |   } finally {
  224 |     clearTimeout(id);
  225 |   }
[mgid-boosts] monad missing API KEY or boost contract { apiKey: true, contract: '' }
[mgid-boosts] base missing API KEY or boost contract { apiKey: true, contract: '' }
[mgid-boosts] linea missing API KEY or boost contract { apiKey: true, contract: '' }
[mgid-boosts] mantle no result 0 No transactions found
[mgid-boosts] mitosis no result 0 NOTOK
[adapter-sends] 0G ChainScan v2 failed for base https://chainscan.0g.ai SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
    at JSON.parse (<anonymous>)
    at fetchJsonWithTimeout (src\app\api\adapter-sends\route.ts:222:24)
    at async fetchOgAddressTokenTransfersV2 (src\app\api\adapter-sends\route.ts:450:22)
    at async fetchOgAdapterSends (src\app\api\adapter-sends\route.ts:523:19)
    at async GET (src\app\api\adapter-sends\route.ts:912:50)
  220 |     }
  221 |
> 222 |     return text ? JSON.parse(text) : null;
      |                        ^
  223 |   } finally {
  224 |     clearTimeout(id);
  225 |   }
[adapter-sends] 0G ChainScan old API failed for base https://chainscan.0g.ai SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
    at JSON.parse (<anonymous>)
    at fetchJsonWithTimeout (src\app\api\adapter-sends\route.ts:222:24)
    at async fetchOgAddressTokenTransfersOldApi (src\app\api\adapter-sends\route.ts:493:20)
    at async fetchOgAdapterSends (src\app\api\adapter-sends\route.ts:538:19)
    at async GET (src\app\api\adapter-sends\route.ts:912:50)
  220 |     }
  221 |
> 222 |     return text ? JSON.parse(text) : null;
      |                        ^
  223 |   } finally {
  224 |     clearTimeout(id);
  225 |   }
[adapter-sends] og all ChainScan strategies failed SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
    at JSON.parse (<anonymous>)
    at fetchJsonWithTimeout (src\app\api\adapter-sends\route.ts:222:24)
    at async fetchOgAddressTokenTransfersOldApi (src\app\api\adapter-sends\route.ts:493:20)
    at async fetchOgAdapterSends (src\app\api\adapter-sends\route.ts:538:19)
    at async GET (src\app\api\adapter-sends\route.ts:912:50)
  220 |     }
  221 |
> 222 |     return text ? JSON.parse(text) : null;
      |                        ^
  223 |   } finally {
  224 |     clearTimeout(id);
  225 |   }
[mgid-boosts] monad missing API KEY or boost contract { apiKey: true, contract: '' }
[mgid-boosts] base missing API KEY or boost contract { apiKey: true, contract: '' }
[mgid-boosts] linea missing API KEY or boost contract { apiKey: true, contract: '' }
[mgid-boosts] mitosis no result 0 NOTOK
[mgid-boosts] mantle no result 0 No transactions found
[next-auth][warn] DEBUG_ENABLED
[next-auth][warn] DEBUG_ENABLED
[cookieverse:okx-x402-settle-failed] {
  errorReason: 'fetch failed',
  errorMessage: 'fetch failed',
  transaction: '',
  network: 'eip155:196'
}
[cookieverse:okx-x402-supported-fallback] OKX facilitator supported-kind discovery timed out
[cookieverse:okx-x402-settle-failed] {
  errorReason: 'fetch failed',
  errorMessage: 'fetch failed',
  transaction: '',
  network: 'eip155:196'
}
[cookieverse:x402-supported-fallback:coinbase] coinbase facilitator supported-kind discovery timed out
[next-auth][warn] DEBUG_ENABLED
[adapter-sends] 0G ChainScan v2 failed for base https://chainscan.0g.ai SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
    at JSON.parse (<anonymous>)
    at fetchJsonWithTimeout (src\app\api\adapter-sends\route.ts:222:24)
    at async fetchOgAddressTokenTransfersV2 (src\app\api\adapter-sends\route.ts:450:22)
    at async fetchOgAdapterSends (src\app\api\adapter-sends\route.ts:523:19)
    at async GET (src\app\api\adapter-sends\route.ts:912:50)
  220 |     }
  221 |
> 222 |     return text ? JSON.parse(text) : null;
      |                        ^
  223 |   } finally {
  224 |     clearTimeout(id);
  225 |   }
[adapter-sends] 0G ChainScan old API failed for base https://chainscan.0g.ai SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
    at JSON.parse (<anonymous>)
    at fetchJsonWithTimeout (src\app\api\adapter-sends\route.ts:222:24)
    at async fetchOgAddressTokenTransfersOldApi (src\app\api\adapter-sends\route.ts:493:20)
    at async fetchOgAdapterSends (src\app\api\adapter-sends\route.ts:538:19)
    at async GET (src\app\api\adapter-sends\route.ts:912:50)
  220 |     }
  221 |
> 222 |     return text ? JSON.parse(text) : null;
      |                        ^
  223 |   } finally {
  224 |     clearTimeout(id);
  225 |   }
[adapter-sends] og all ChainScan strategies failed SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
    at JSON.parse (<anonymous>)
    at fetchJsonWithTimeout (src\app\api\adapter-sends\route.ts:222:24)
    at async fetchOgAddressTokenTransfersOldApi (src\app\api\adapter-sends\route.ts:493:20)
    at async fetchOgAdapterSends (src\app\api\adapter-sends\route.ts:538:19)
    at async GET (src\app\api\adapter-sends\route.ts:912:50)
  220 |     }
  221 |
> 222 |     return text ? JSON.parse(text) : null;
      |                        ^
  223 |   } finally {
  224 |     clearTimeout(id);
  225 |   }
[mgid-boosts] monad missing API KEY or boost contract { apiKey: true, contract: '' }
[mgid-boosts] base missing API KEY or boost contract { apiKey: true, contract: '' }
[mgid-boosts] linea missing API KEY or boost contract { apiKey: true, contract: '' }
[mgid-boosts] mitosis no result 0 NOTOK
[mgid-boosts] mantle no result 0 No transactions found
